# lottery-number-generator

./: .gitignore  README.md  detail.html  generator.py  pyproject.toml  requirements.txt
_layouts/: default.html
books/: loto7.ipynb
data/jpn/loto6/: convert_to_utf-8.sh  loto6.conf  loto6.csv  loto6_utf-8.csv
data/jpn/loto7/: convert_to_utf-8.sh  loto7.conf  loto7.csv  loto7_utf-8.csv
data/jpn/miniloto/: convert_to_utf-8.sh  miniloto.conf  miniloto.csv  miniloto_utf-8.csv
doc/: detail.html
notebook/: loto7.ipynb  loto7_lstm_1model.ipynb  loto7_lstm_separated_models.ipynb
