[tool.poetry]
name = "lottery-number-generator"
version = "0.1.0"
description = ""
authors = ["Eunchong Kim <chariskimec@gmail.com>"]
readme = "README.md"
packages = [{include = "lottery_number_generator"}]

[tool.poetry.dependencies]
python = ">=3.9, <=3.10.10"
tensorflow = "^2.11.0"
numpy = "^1.24.2"
pandas = "^1.5.3"
jupyterlab = "^3.6.1"
jupyter-kite = "^2.0.2"
joblib = "^1.2.0"
scikit-learn = "^1.2.1"
statsmodels = "^0.13.5"
matplotlib = "^3.7.0"
plotly = "^5.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
