[tool.poetry]
name = "lottery-number-generator"
version = "0.1.0"
description = ""
authors = ["Eunchong Kim <chariskimec@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
tensorflow = "^2.12.0"
numpy = "1.23.x"
pandas = "^2.0.1"
jupyterlab = "^3.6.3"
jupyterlab-kite = "^2.0.2"
scikit-learn = "^1.2.2"
statsmodels = "^0.13.5"
matplotlib = "^3.7.1"
plotly = "^5.14.1"
joblib = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
